<resources>
    <string name="app_name">Favorite Consumer</string>
    <string name="follower">Follower</string>
    <string name="following">Following</string>
    <string name="repository">Repository</string>
    <string name="loading">loading</string>
    <string name="avatar_photo">avatar photo</string>
    <string name="company_icon">company icon</string>
    <string name="location_icon">location icon</string>
    <string name="no_description">No description</string>
    <string name="no_follower_yet">No Follower Yet</string>
    <string name="not_following_yet">Not Following Yet</string>
    <string name="avatar_of_the_user">Avatar of the user</string>
    <string name="no_repository_yet">No Repository Yet</string>
    <string name="you_have_no_favorite_user">You have no favorite user</string>
    <string name="delete_button">Delete button</string>
</resources>